--- a/06_Paper/COG-ED/ref_COG-ED.bib
+++ b/06_Paper/COG-ED/ref_COG-ED.bib
@@ -1,5 +1,21 @@
 % Encoding: UTF-8
 
+@Article{Hartmann2011,
+  author    = {Hartmann, Andrea S. and Rief, Winfried and Hilbert, Anja},
+  journal   = {Perceptual and Motor Skills},
+  title     = {Psychometric properties of the {German} version of the {Barratt} {Impulsiveness} {Scale}, {Version} 11 ({BIS}-11) for adolescents},
+  year      = {2011},
+  issn      = {1558-688X},
+  number    = {2},
+  pages     = {353--368},
+  volume    = {112},
+  abstract  = {Impulsiveness is increasingly gaining attention as a potential risk factor for various mental disorders. Until now, there have been German instruments that allowed for assessing adolescents' self-reported impulsiveness multidimensionally. The present study examined the German version of the Barratt Impulsiveness Scale-11 (BIS-11) for adolescents. The instrument was completed by 659 adolescents ages 10 to 20 years; 98 were retested after 6 months. Items showed adequate psychometric properties. An exploratory factor analysis identified three factors that showed slight differences from the initial questionnaire proposed by Barratt. The factors showed low to moderate intercorrelations, satisfactory internal consistency (dependent on factor), and were stable over time. Convergent validity was ascertained, and the item pool showed sufficient power to discriminate adolescents with symptoms of attention deficit hyperactivity disorder and those with loss of eating control from healthy adolescents. Findings suggest that the German BIS-11 is appropriate for reliable investigation of impulsiveness in adolescents. Future research should examine sensitivity as a screening tool, as well as sensitivity to change. (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+  address   = {US},
+  doi       = {10.2466/08.09.10.PMS.112.2.353-368},
+  keywords  = {Foreign Language Translation, Impulsiveness, Psychometrics, Rating Scales, Attention Deficit Disorder with Hyperactivity, Eating Disorders},
+  publisher = {Perceptual \& Motor Skills},
+}
+
 @Article{Hart1988,
   author     = {Hart, Sandra G. and Staveland, Lowell E.},
   title      = {Development of {NASA}-{TLX} ({Task} {Load} {Index}): {Results} of empirical and theoretical research},
